nto redisign started: BookUpdateNto updated